crud rest api on amenities, perks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "airbnb-clone-fullstack"
+name = "airbnb-clone"
 version = "0.1.0"
 description = "airbnb clone with django and react"
 authors = ["toweringcloud <toweringcloud@gmail.com>"]
