--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^5.1.1"
-pillow = "^10.4.0"
+django-environ = "^0.11.2"
 djangorestframework = "^3.15.2"
+pillow = "^10.4.0"
+pyjwt = "^2.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
