--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-environ = "^0.11.2"
 djangorestframework = "^3.15.2"
 pillow = "^10.4.0"
 pyjwt = "^2.9.0"
+django-cors-headers = "^4.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
