--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ authors = ["toweringcloud <toweringcloud@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.10.12"
 django = "^5.1.1"
 django-environ = "^0.11.2"
 djangorestframework = "^3.15.2"
 pillow = "^10.4.0"
 pyjwt = "^2.9.0"
 django-cors-headers = "^4.5.0"
-
-[tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
+django-extensions = "^3.2.3"
+ipython = "^8.29.0"
+Werkzeug = "^3.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
