--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ authors = ["toweringcloud <toweringcloud@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.10.12"
+python = "3.12.7"
+poetry = "1.8.5"
+black = "^24.8.0"
 django = "^5.1.1"
 django-environ = "^0.11.2"
+django-extensions = "^3.2.3"
+django-cors-headers = "^4.5.0"
 djangorestframework = "^3.15.2"
+ipython = "^8.29.0"
 pillow = "^10.4.0"
 pyjwt = "^2.9.0"
-django-cors-headers = "^4.5.0"
-black = "^24.8.0"
-django-extensions = "^3.2.3"
-ipython = "^8.29.0"
 Werkzeug = "^3.1.3"
 
 [build-system]
